--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "classnames": "^2.3.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
